--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,16 +30,35 @@ stages:
     jobs:
      - job: terraform_validate
        steps:
-       - task: TerraformTask@5
-         inputs:
+        - task: TerraformTask@5
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            backendServiceArm: 'alfa'
+            backendAzureRmResourceGroupName: 'alfa_todo'
+            backendAzureRmStorageAccountName: 'alfaacaunt'
+            backendAzureRmContainerName: 'tfstate'
+            backendAzureRmKey: 'tf.tfstate'
+            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+        - task: TerraformTask@5
+          inputs:
            provider: 'azurerm'
-           customCommand: init
            command: 'validate'
            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
   - stage: terraform_plan
     jobs:
       - job: terraform_plan
         steps:
+        - task: TerraformTask@5
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            backendServiceArm: 'alfa'
+            backendAzureRmResourceGroupName: 'alfa_todo'
+            backendAzureRmStorageAccountName: 'alfaacaunt'
+            backendAzureRmContainerName: 'tfstate'
+            backendAzureRmKey: 'tf.tfstate'
+            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
         - task: TerraformTask@5
           inputs:
             provider: 'azurerm'
