--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,3 +64,24 @@ stages:
             provider: 'azurerm'
             command: 'plan'
             workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  - stage: terraform_apply
+    jobs:
+      - job: terraform_apply
+        steps:
+        - task: TerraformTask@5
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            backendServiceArm: 'alfa'
+            backendAzureRmResourceGroupName: 'alfa_todo'
+            backendAzureRmStorageAccountName: 'alfaacaunt'
+            backendAzureRmContainerName: 'tfstate'
+            backendAzureRmKey: 'tf.tfstate'
+            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+
+        - task: TerraformTask@5
+          inputs:
+            provider: 'azurerm'
+            command: 'apply'
+            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            environmentServiceNameAzureRM: 'alfa'
