--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ stages:
             backendAzureRmStorageAccountName: 'alfaacaunt'
             backendAzureRmContainerName: 'tfstate'
             backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
   - stage: terraform_validate
     jobs:
      - job: terraform_validate
@@ -39,12 +39,12 @@ stages:
             backendAzureRmStorageAccountName: 'alfaacaunt'
             backendAzureRmContainerName: 'tfstate'
             backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
         - task: TerraformTask@5
           inputs:
            provider: 'azurerm'
            command: 'validate'
-           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+           workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
   - stage: terraform_plan
     jobs:
       - job: terraform_plan
@@ -58,12 +58,12 @@ stages:
             backendAzureRmStorageAccountName: 'alfaacaunt'
             backendAzureRmContainerName: 'tfstate'
             backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
         - task: TerraformTask@5
           inputs:
             provider: 'azurerm'
             command: 'plan'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
   - stage: terraform_apply
     jobs:
       - job: terraform_apply
@@ -77,11 +77,11 @@ stages:
             backendAzureRmStorageAccountName: 'alfaacaunt'
             backendAzureRmContainerName: 'tfstate'
             backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
 
         - task: TerraformTask@5
           inputs:
             provider: 'azurerm'
             command: 'apply'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+            workingDirectory: '$(System.DefaultWorkingDirectory)/Enviroment/dev'
             environmentServiceNameAzureRM: 'alfa'
