--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,11 +33,13 @@ stages:
        - task: tfsec@1
          inputs:
            version: 'v1.26.0'
+           continueOnError: 'true'
            dir: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
        - task: PowerShell@2
          inputs:
            targetType: 'inline'
            script: 'tflint'
+           continueOnError: 'true'
            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
   - stage: terraform_validate
     jobs:
