Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,8 +39,10 @@ stages:
          inputs:
            targetType: 'inline'
            script: 'tflint'
+           errorActionPreference: 'continue'
            continueOnError: 'true'
-           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+           dir: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+
   - stage: terraform_validate
     jobs:
      - job: terraform_validate
