--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,28 +4,28 @@ trigger:
 pool: Todo infra
 
 stages:
-  - stage: terraform_install
-    jobs:
-      - job: terraform_install
-        steps:
-        - task: TerraformInstaller@1
-          inputs:
-            terraformVersion: 'latest'
+  # - stage: terraform_install
+  #   jobs:
+  #     - job: terraform_install
+  #       steps:
+  #       - task: TerraformInstaller@1
+  #         inputs:
+  #           terraformVersion: 'latest'
 
-  - stage: terraform_init
-    jobs:
-      - job: terraform_init
-        steps:
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'init'
-            backendServiceArm: 'alfa'
-            backendAzureRmResourceGroupName: 'alfa_todo'
-            backendAzureRmStorageAccountName: 'todoacco'
-            backendAzureRmContainerName: 'alfaacco'
-            backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  # - stage: terraform_init
+  #   jobs:
+  #     - job: terraform_init
+        # steps:
+        # - task: TerraformTask@5
+        #   inputs:
+        #     provider: 'azurerm'
+        #     command: 'init'
+        #     backendServiceArm: 'alfa'
+        #     backendAzureRmResourceGroupName: 'alfa_todo'
+        #     backendAzureRmStorageAccountName: 'todoacco'
+        #     backendAzureRmContainerName: 'alfaacco'
+        #     backendAzureRmKey: 'tf.tfstate'
+        #     workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
   - stage: scan_code
     jobs:
      - job: 
@@ -35,9 +35,9 @@ stages:
            scannerMode: 'cli'
            cliScannerVersion: 'CLI'
            configMode: 'manual'
-           cliProjectKey: 'todoacco'
-           cliProjectName: 'alfaacco'
-           cliSources: '.$(System.DefaultWorkingDirectory)\Enviroment\dev'
+           cliProjectKey: 'todoinfra'
+           cliProjectName: 'todoinfra'
+           cliSources: '.'
      - job: scan_code
        steps:
        - task: tfsec@1
@@ -53,68 +53,68 @@ stages:
            continueOnError: 'true'
            dir: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
 
-  - stage: terraform_validate
-    jobs:
-     - job: terraform_validate
-       steps:
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'init'
-            backendServiceArm: 'alfa'
-            backendAzureRmResourceGroupName: 'alfa_todo'
-            backendAzureRmStorageAccountName: 'todoacco'
-            backendAzureRmContainerName: 'alfaacco'
-            backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  # - stage: terraform_validate
+  #   jobs:
+  #    - job: terraform_validate
+  #      steps:
+  #       - task: TerraformTask@5
+  #         inputs:
+  #           provider: 'azurerm'
+  #           command: 'init'
+  #           backendServiceArm: 'alfa'
+  #           backendAzureRmResourceGroupName: 'alfa_todo'
+  #           backendAzureRmStorageAccountName: 'todoacco'
+  #           backendAzureRmContainerName: 'alfaacco'
+  #           backendAzureRmKey: 'tf.tfstate'
+  #           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
 
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'validate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  #       - task: TerraformTask@5
+  #         inputs:
+  #           provider: 'azurerm'
+  #           command: 'validate'
+  #           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
 
-  - stage: terraform_plan
-    jobs:
-      - job: terraform_plan
-        steps:
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'init'
-            backendServiceArm: 'alfa'
-            backendAzureRmResourceGroupName: 'alfa_todo'
-            backendAzureRmStorageAccountName: 'todoacco'
-            backendAzureRmContainerName: 'alfaacco'
-            backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  # - stage: terraform_plan
+  #   jobs:
+  #     - job: terraform_plan
+  #       steps:
+  #       - task: TerraformTask@5
+  #         inputs:
+  #           provider: 'azurerm'
+  #           command: 'init'
+  #           backendServiceArm: 'alfa'
+  #           backendAzureRmResourceGroupName: 'alfa_todo'
+  #           backendAzureRmStorageAccountName: 'todoacco'
+  #           backendAzureRmContainerName: 'alfaacco'
+  #           backendAzureRmKey: 'tf.tfstate'
+  #           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
 
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'plan'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
-            environmentServiceNameAzureRM: 'alfa'
+  #       - task: TerraformTask@5
+  #         inputs:
+  #           provider: 'azurerm'
+  #           command: 'plan'
+  #           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  #           environmentServiceNameAzureRM: 'alfa'
 
-  - stage: terraform_apply
-    jobs:
-      - job: terraform_apply
-        steps:
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'init'
-            backendServiceArm: 'alfa'
-            backendAzureRmResourceGroupName: 'alfa_todo'
-            backendAzureRmStorageAccountName: 'todoacco'
-            backendAzureRmContainerName: 'alfaacco'
-            backendAzureRmKey: 'tf.tfstate'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  # - stage: terraform_apply
+  #   jobs:
+  #     - job: terraform_apply
+  #       steps:
+  #       - task: TerraformTask@5
+  #         inputs:
+  #           provider: 'azurerm'
+  #           command: 'init'
+  #           backendServiceArm: 'alfa'
+  #           backendAzureRmResourceGroupName: 'alfa_todo'
+  #           backendAzureRmStorageAccountName: 'todoacco'
+  #           backendAzureRmContainerName: 'alfaacco'
+  #           backendAzureRmKey: 'tf.tfstate'
+  #           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
 
-        - task: TerraformTask@5
-          inputs:
-            provider: 'azurerm'
-            command: 'apply'
-            workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
-            commandOptions: '-auto-approve'
-            environmentServiceNameAzureRM: 'alfa'
+  #       - task: TerraformTask@5
+  #         inputs:
+  #           provider: 'azurerm'
+  #           command: 'apply'
+  #           workingDirectory: '$(System.DefaultWorkingDirectory)\Enviroment\dev'
+  #           commandOptions: '-auto-approve'
+  #           environmentServiceNameAzureRM: 'alfa'
