--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ stages:
        steps:
        - task: SonarQubePrepare@8
          inputs:
+           SonarQube: 'SonarQube'
            scannerMode: 'cli'
            cliScannerVersion: 'CLI'
            configMode: 'manual'
